force-app/main/default/objects/Item_Master_Product__c/fields/Create_Revenue_Plans_On__c.field-meta.xml
<CustomField>
    <fullName>Create_Revenue_Plans_On__c</fullName>
    <description>Custom Field as per BIZ-51029</description>
    <label>Create Revenue Plans On</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Project Progress</fullName>
            </value>
            <value>
                <fullName>Revenue Arrangement Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>