force-app/main/default/objects/Item_Master_Product__c/fields/Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Revenue_Account__c</fullName>
    <description>Custom field as per BIZ-51029</description>
    <label>Deferred Revenue Account</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2301 Deferred Revenue : Deferred Revenue - Clearing Account</fullName>
            </value>
            <value>
                <fullName>2310 Deferred Revenue : Deferred Revenue - Maintenance &amp; Support</fullName>
            </value>
            <value>
                <fullName>2311 Deferred Revenue : Deferred Revenue : Deferred Revenue ADJ - Maintenance &amp; Support</fullName>
            </value>
            <value>
                <fullName>2320 Deferred Revenue : Deferred Revenue - Professional Services</fullName>
            </value>
            <value>
                <fullName>2321 Deferred Revenue : Deferred Revenue : Deferred Revenue ADJ - Professional Services</fullName>
            </value>
            <value>
                <fullName>2330 Deferred Revenue : Deferred Revenue - Software Perpetual Licenses</fullName>
            </value>
            <value>
                <fullName>2340 Deferred Revenue : Deferred Revenue - Other</fullName>
            </value>
            <value>
                <fullName>2345 Deferred Revenue : Deferred Revenue - Hardware</fullName>
            </value>
            <value>
                <fullName>2347 Deferred Revenue : Deferred Revenue - Marketing Events</fullName>
            </value>
            <value>
                <fullName>2350 Deferred Revenue : Deferred Revenue - Subscription Services</fullName>
            </value>
            <value>
                <fullName>2352 Deferred Revenue : Deferred Revenue - Subscription Services License (ARM)</fullName>
            </value>
            <value>
                <fullName>2353 Deferred Revenue : Deferred Revenue - Subscription Services Support (ARM)</fullName>
            </value>
            <value>
                <fullName>2355 Deferred Revenue : Deferred Revenue - SaaS</fullName>
            </value>
            <value>
                <fullName>2370 Deferred Revenue : Deferred Revenue - Program Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>