force-app/main/default/objects/Item_Master_Product__c/fields/Income_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Account__c</fullName>
    <description>Custom Field built according to BIZ-51029</description>
    <label>Income Account</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0003 Sales : Direct Sales</fullName>
            </value>
            <value>
                <fullName>0001 Sales : Direct Sales : Licensing</fullName>
            </value>
            <value>
                <fullName>4010 Sales : Software Perpetual Licenses</fullName>
            </value>
            <value>
                <fullName>4011 Sales : Software Perpetual Licenses : Shipping and Handling</fullName>
            </value>
            <value>
                <fullName>4101 Sales : Software Perpetual Licenses : Software Licenses ADJ</fullName>
            </value>
            <value>
                <fullName>4015 Sales : Subscription Services</fullName>
            </value>
            <value>
                <fullName>4012 Sales : Subscription Services : Subscription Services - License (ARM)</fullName>
            </value>
            <value>
                <fullName>4013 Sales : Subscription Services : Subscription Services - Support (ARM)</fullName>
            </value>
            <value>
                <fullName>4016 Sales : Subscription Services : Subscription Services - Usage Based</fullName>
            </value>
            <value>
                <fullName>4017 Sales : Subscription Services : Sales : License Adj - 606</fullName>
            </value>
            <value>
                <fullName>4018 Sales : Subscription Services : Sales : PCS Adj - 606</fullName>
            </value>
            <value>
                <fullName>4102 Sales : Subscription Services : Subscription Services ADJz</fullName>
            </value>
            <value>
                <fullName>4106 Sales : Subscription Services : Subscription Services - Usage ADJ</fullName>
            </value>
            <value>
                <fullName>4020 Sales : Maintenance &amp; Support</fullName>
            </value>
            <value>
                <fullName>4025 Sales : Maintenance &amp; Support : Usage</fullName>
            </value>
            <value>
                <fullName>4104 Sales : Maintenance &amp; Support : Maintenance &amp; Support ADJ</fullName>
            </value>
            <value>
                <fullName>4035 Sales : Professional Services</fullName>
            </value>
            <value>
                <fullName>4029 Sales : Professional Services : Professional Services - Reimbursed Expenses DealCloud</fullName>
            </value>
            <value>
                <fullName>4030 Sales : Professional Services : Professional Services - Fixed Fee</fullName>
            </value>
            <value>
                <fullName>4031 Sales : Professional Services : Professional Services - Reimbursed Expenses</fullName>
            </value>
            <value>
                <fullName>4032 Sales : Professional Services : Professional Services - T&amp;M</fullName>
            </value>
            <value>
                <fullName>4033 Sales : Professional Services : Professional Services - Strategic Consulting T&amp;M</fullName>
            </value>
            <value>
                <fullName>4034 Sales : Professional Services : Professional Services - Subsidy In</fullName>
            </value>
            <value>
                <fullName>4036 Sales : Professional Services : Professional Services - Subsidy Out</fullName>
            </value>
            <value>
                <fullName>4037 Sales : Professional Services : Professional Services - Strategic Consulting Fixed Fee</fullName>
            </value>
            <value>
                <fullName>4038 Sales : Professional Services : Professional Services - Training</fullName>
            </value>
            <value>
                <fullName>4039 Sales : Professional Services : Professional Services - Training DealCloud</fullName>
            </value>
            <value>
                <fullName>4040 Sales : Professional Services : Sales : Professional Services : PSs ADJ - T&amp;M - 606</fullName>
            </value>
            <value>
                <fullName>4041 Sales : Professional Services : Sales : Professional Services : PS ADJ - FF - 606</fullName>
            </value>
            <value>
                <fullName>4042 Sales : Professional Services : PS – Strategic Consulting – 606</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>