force-app/main/default/objects/Item_Master_Product__c/fields/Item_Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Revenue_Category__c</fullName>
    <description>Custom field as per BIZ-51029</description>
    <label>Item Revenue Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Cloud Renewal</fullName>
            </value>
            <value>
                <fullName>Intapp Renewal</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Upfront Posting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>