force-app/main/default/objects/Item_Master_Product__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line - EXPIRING 4/28</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Compliguard</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Lateral Hire</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Sandbox</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms of Business</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms of Business - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Workflow</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Intapp Time - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
            </value>
            <value>
                <fullName>Third Party Product - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing - Cloud</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Third Party Connectors</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
            <value>
                <fullName>Relationships - Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>