force-app/main/default/objects/Item_Master_Product__c/fields/Product_LineNew__c.field-meta.xml
<CustomField>
    <fullName>Product_LineNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Item Master Products</relationshipLabel>
    <relationshipName>Item_Master_Products</relationshipName>
    <type>Lookup</type>
</CustomField>