force-app/main/default/objects/Item_Master_Product__c/fields/Rev_Rec_Forecast_Rule__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Forecast_Rule__c</fullName>
    <description>Custom Field as per BIZ-51029</description>
    <label>Rev Rec Forecast Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default One-Time Direct Posting</fullName>
            </value>
            <value>
                <fullName>Default Percent Complete</fullName>
            </value>
            <value>
                <fullName>Default Standard</fullName>
            </value>
            <value>
                <fullName>POB 1 - Subscription Services (on-premise)</fullName>
            </value>
            <value>
                <fullName>POB 1 - Upfront Posting</fullName>
            </value>
            <value>
                <fullName>POB 2 - Cloud / SaaS</fullName>
            </value>
            <value>
                <fullName>POB 3 - Professional Services Upon Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>