force-app/main/default/objects/Item_Master_Product__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Perpetual License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>