force-app/main/default/objects/Item_Master_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intapp_Item_Master_Number__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Product_LineNew__c</columns>
    <columns>Description__c</columns>
    <columns>TaxCode__c</columns>
    <columns>NetSuite_Internal_Id__c</columns>
    <columns>Revenue_Allocation_Group__c</columns>
    <columns>Create_Revenue_Plans_On__c</columns>
    <columns>Deferred_Revenue_Account__c</columns>
    <columns>Income_Account__c</columns>
    <columns>Item_Revenue_Category__c</columns>
    <columns>Revenue_Recognition_Rule__c</columns>
    <columns>Revenue_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NetSuite_Internal_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>